# EvoSkill_deepagents

./: .gitignore  README.md  financial-methodology-guide.skill  output.txt  pre-computation-validation.skill  pyproject.toml
.claude/: program.yaml
.claude/skills/: forecasting-methodology-guide.skill
.claude/skills/answer-output-normalizer/: SKILL.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/financial-methodology-guide/: SKILL.md
docs/plans/: 2026-03-12-azure-openai-sdk-design.md  2026-03-12-azure-openai-sdk.md  2026-03-16-deepagents-migration-design.md  2026-03-16-deepagents-migration.md
notebooks/: cc_agent.ipynb  datasets.ipynb  eval.ipynb  self_improve_better.ipynb  self_improve_loop.ipynb  test.ipynb  test_registry.ipynb  train_data.ipynb
reports/v3/: gepa_integration_design.md  resources_analysis.md  system_architecture_design.md  tool_crafter_design.md
scripts/: run_concordance_loop.py  run_concordance_loop_one_patient.py  run_concordance_one_patient.py  run_eval.py  run_eval_livecodebench.py  run_eval_sealqa.py  run_loop.py  run_loop_sealqa.py
src/agent_profiles/: __init__.py  agents.py  base.py  options.py  sdk_config.py  tools.py
src/api/: task_registry.py
src/cache/: __init__.py  run_cache.py
src/evaluation/: __init__.py  concordance_scorer.py  evaluate.py
src/loop/: config.py  helpers.py  runner.py
src/registry/: __init__.py  manager.py  models.py
tests/: test_azure_runner.py  test_azure_tools.py  test_deepagent_runner.py  test_deepagent_tools.py  test_sdk_config.py  test_skill_injection.py  test_stratified_sampling.py
(+26 files in other folders)
