[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evoskill"
version = "0.1.0"
description = "self-improving agent via skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.12",
    "langchain-openai>=0.3",
    "langchain>=0.3",
    "dspy>=3.0.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "notebook>=7.5.3",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "datasets>=4.6.0",
    "llm-sandbox[docker]>=0.3.36",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
